--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -248,6 +248,14 @@ h1, h2, h3, h4, h5, h6 {
     display: flex;
     flex-direction: column;
 }
+.container.dashboard-card.wide {
+    max-width: calc(var(--padding-lg) + var(--page-width-card) * 2);
+}
+.container.dashboard-card.tall {
+    max-height: calc(var(--padding-lg) + var(--page-height-card) * 2);
+    min-height: calc(var(--padding-lg) + var(--page-height-card) * 2);
+}
+
 
 .container.dashboard-card .content {
     flex: 1;
