--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -386,7 +386,7 @@ button:hover {
     width: 100%;
     height: 100%;
     pointer-events: none;
-    z-index: 1000;
+    z-index: 5000;
 }
 
 .modal-overlay {
@@ -397,7 +397,6 @@ button:hover {
     width: 100%; /* Full width */
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
-    background-color: var(--color-modal-bg-gradient);
     background: var(--color-modal-bg-gradient);
     overflow: auto;
     pointer-events: auto;
@@ -484,7 +483,7 @@ button:hover {
     overflow-x: auto;
     overflow-y: hidden;
     min-height: 38px;
-    margin: 0;
+    margin: var(--padding-sm) 0 0 0;
     padding: 0 16px;
 }
 
@@ -499,8 +498,15 @@ button:hover {
     z-index: 1000;
 }
 
-.tabs.dropdown-mode .hamburger-menu {
+.tabs .button-symbol {
+    display: none; /* Hide by default */
+}
+.tabs.dropdown-mode .button-symbol {
     display: block;
+    position: absolute;
+    left: 8px;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 .tabs.dropdown-mode .tab-button {
@@ -515,6 +521,7 @@ button:hover {
 
 .tabs.dropdown-mode.menu-open .tab-button {
     display: block;
+    top: 0;
     margin: 0;
     border: 1px solid var(--color-border);
     border-radius: 0;
@@ -931,6 +938,18 @@ button.save-button:disabled {
 
 @media (max-width: 800px) {
     /* Mobile navigation */
+    header:has(nav.open)::before {
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        height: 100%;
+        content: "";
+        background: var(--color-modal-bg-gradient);
+        z-index: 3000;
+    }
+    
     nav.open {
         height: auto;
     }
