--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -578,7 +578,7 @@ button:hover {
 .tab-button.active {
     background-color: var(--background-color);
     color: var(--color-text);
-    top: 1px;
+    bottom: -1px;
     box-shadow: -3px -3px 6px -6px var(--color-shadow);
 }
 
@@ -928,9 +928,16 @@ button.save-button:disabled {
 
 /* Messages */
 .loading-message {
+    text-align: center;
     padding: 1rem;
     color: #666;
     font-style: italic;
+}
+.loading-message img {
+    display: inline-block;
+    width: 48px;
+    height: 48px;
+    margin-bottom: 0.5rem;
 }
 
 .error-message {
