some style and table saving changes

--- a/docs/css/theme.css
+++ b/docs/css/theme.css
@@ -27,6 +27,7 @@
     /* Grays and Neutrals */
     --background-color: #fefefe;
     --background-color-hover: #f0f0f0;
+    --background-color-transparent: #ffffffaa;
     --color-gray: #aaa;
     --color-gray-hover: #888;
     --color-gray-bg: #f0f0f0;
