--- a/docs/css/global.css
+++ b/docs/css/global.css
@@ -7,6 +7,66 @@
 }
 
 
+/* Main interface defaults */
+
+/* Button styles */
+input[type="submit"],
+input[type="button"],
+button {
+    position: relative;
+    background-color: var(--color-blue);
+    color: var(--color-text-inverted);
+    border: none;
+    cursor: pointer;
+    max-width: 200px;
+    min-width: 100px;
+    height: 38px;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: var(--radius-md);
+    box-shadow: 2px 2px 8px -4px var(--color-shadow);
+    transition: background-color 0.15s ease-in-out;
+    overflow: hidden;
+}
+
+input[type="submit"]:hover,
+input[type="button"]:hover,
+button:hover {
+    background-color: var(--color-blue-hover);
+}
+input[type="submit"]:disabled,
+input[type="button"]:disabled,
+button:disabled {
+    pointer-events: none;
+}
+
+input[type="submit"]:after,
+input[type="button"]:after,
+button:after {
+    content: "";
+    pointer-events: none;
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    cursor: default;
+    background-color: var(--background-color-transparent);
+    opacity: 0;
+    transition: opacity 0.15s ease-in-out;
+}
+
+input[type="submit"]:disabled:after,
+input[type="button"]:disabled:after,
+button:disabled:after {
+    opacity: 1;
+}
+
+
+
+
 /* apply colors */
 
 div.white, span.white {
