--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -346,35 +346,27 @@ h1, h2, h3, h4, h5, h6 {
     box-shadow: 0 0 0 0.25rem var(--color-shadow);
 }
 
-/* Button Container */
+/* Button Containers */
 .button-container {
     flex: 1 1 100%;
     display: flex;
     /*flex-direction: column;*/
     gap: 1rem;
 }
-
-/* Button styles */
-.submit-button, 
-button {
-    background-color: var(--color-blue);
-    color: var(--color-text-inverted);
-    border: none;
-    cursor: pointer;
-    max-width: 200px;
-    min-width: 100px;
-    height: 38px;
-    padding: 0.375rem 0.75rem;
-    font-size: 1rem;
-    line-height: 1.5;
-    border-radius: var(--radius-md);
-    box-shadow: 2px 2px 8px -4px var(--color-shadow);
-    transition: background-color 0.15s ease-in-out;
+.button-bar {
+    display: flex;
+    gap: 2px;
 }
-
-.submit-button:hover, 
-button:hover {
-    background-color: var(--color-blue-hover);
+.button-bar :first-child:not(:last-child) {
+    border-radius: var(--radius-md) 0 0 var(--radius-md);
+    /*border-right: 2px solid var(--background-color);*/
+}
+.button-bar :not(:first-child):not(:last-child) {
+    border-radius: 0;
+    /*border-right: 2px solid var(--background-color);*/
+}
+.button-bar :last-child:not(:first-child) {
+    border-radius: 0 var(--radius-md) var(--radius-md) 0;
 }
 
 
@@ -914,17 +906,6 @@ tr:hover > td > .table-edit-textarea {
     margin: 0 4px;
     /*bottom: 1px;*/
 }
-
-button.save-button {
-    background-color: var(--color-red);
-}
-button.save-button:hover {
-    background-color: var(--color-red-hover);
-}
-button.save-button:disabled {
-    background-color: var(--color-gray-bg);
-}
-
 
 /* Messages */
 .loading-message {
