--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -160,6 +160,10 @@ h1, h2, h3, h4, h5, h6 {
     height: 28px;
     padding: 0;
 }
+.button-bar .button-symbol {
+    height: auto;
+}
+
 .material-symbols-outlined {
     font-size: 14pt !important;
     line-height: 27px !important;
@@ -701,9 +705,6 @@ h1, h2, h3, h4, h5, h6 {
     border-top: 0;
 }
 
-td:has(.table-wrapper) {
-    padding: 3px 3px 8px 8px;
-}
 
 th, td {
     padding: 0.5rem;
@@ -732,6 +733,23 @@ table {
     margin: 0;
     background-color: var(--background-color);
     overflow: hidden;
+}
+tr {
+    position: relative;
+}
+
+td:has(.table-wrapper) {
+    padding: 8px;
+}
+
+table tr:not(:first-child) thead {
+    display: none;
+}
+table tr:first-child td:has(.table-wrapper) {
+    padding-top: 1px;
+}
+table tr:not(:first-child):has(table) {
+    border-top: 1px solid var(--color-border);
 }
 
 .new-row-button {
@@ -788,16 +806,17 @@ table:has(.dragging):not(:has(table .dragging)) > tfoot > tr > .new-row-button::
 }
 
 /* row is being deleted */
-tfoot > tr.draggable:first-child::after {
+tfoot > tr:has(td.row-drag-handle):first-child::after, tbody > tr.marked-for-deletion:first-of-type::after {
     content: "Deleted rows";
 }
-tfoot > tr.draggable::after {
+tfoot > tr:has(td.row-drag-handle)::after, tbody > tr.marked-for-deletion::after {
     content: "";
     position: absolute;
-    padding-top: .25rem;
+    padding-top: .15rem;
     color: white;
     inset: 0;
-    background: var(--color-red-bg-transparent);
+    background: var(--color-red-bg);
+    opacity: .6;
     pointer-events: none;
     font-style: italic;
     z-index: 2;
@@ -885,8 +904,15 @@ tr.dragging::after {
 }
 
 .table-edit-textarea {
+    border-radius: calc(var(--radius-md) - 2px);
     transition: background-color 0.15s ease-in-out, outline 0.05s ease-in-out;
 }
+
+.dirty > .table-edit-textarea {
+    background-color: var(--color-red-bg-transparent);
+    outline: 2px solid var(--color-red-bg-transparent);
+}
+
 tr:hover > td > .table-edit-textarea {
     background-color: var(--color-blue-bg-transparent);
 }
@@ -894,18 +920,16 @@ tr:hover > td > .table-edit-textarea {
     outline: solid 2px var(--color-blue-bg-hover);
 }
 
-.dirty::after {
+/*.dirty::after {
     content: "edited";
     display: inline-block;
-    /*position: relative;*/
     font-size: 0.8rem;
     color: var(--color-red);
     border-radius: var(--radius-md);
     border: 1px dashed var(--color-red);
     padding: 1.5px;
     margin: 0 4px;
-    /*bottom: 1px;*/
-}
+}*/
 
 /* Messages */
 .loading-message {
@@ -921,18 +945,16 @@ tr:hover > td > .table-edit-textarea {
     margin-bottom: 0.5rem;
 }
 
-.error-message {
-    padding: 1rem;
-    color: var(--color-red);
-    font-style: italic;
-}
-
 /* When dragging is happening anywhere, change all cursors */
 :has(.dragging) * {
     cursor: grabbing !important;
 }
 
 
+
+.hide {
+    display: none !important;
+}
 
 
 
