--- a/docs/css/theme.css
+++ b/docs/css/theme.css
@@ -49,6 +49,7 @@
     --color-yellow: yellow;
     --color-yellow-hover: #e6c200;
     --color-yellow-bg: #ff9;
+    --color-yellow-bg-transparent: #ffff0066;
     --color-yellow-bg-hover: #ff6;
 
     --color-blue: #0d6efd;
