--- a/docs/css/global.css
+++ b/docs/css/global.css
@@ -24,9 +24,9 @@ button {
     color: var(--color-text-inverted);
     border: none;
     cursor: pointer;
-    max-width: 200px;
+    max-width: 250px;
     min-width: 100px;
-    height: 38px;
+    /*height: 38px;*/
     padding: 0.375rem 0.75rem;
     font-size: 1rem;
     line-height: 1.5;
