--- a/docs/css/theme.css
+++ b/docs/css/theme.css
@@ -95,6 +95,7 @@
         --background-color-hover: #202224;
         --color-text: #b4b4b4;
         --color-text-light: #bbb;
+        --color-text-muted: #bbb;
         --color-text-inverted: #111;
 
         --color-gray: #666;
@@ -105,6 +106,7 @@
 
         --color-border: #333a40;
         --color-shadow: rgba(0, 0, 0, 0.7);
+        --color-card-bg: #23272b;
 
         --color-primary: #2baaff;
         --color-primary-light: #156bcc;
