--- a/docs/css/global.css
+++ b/docs/css/global.css
@@ -7,8 +7,11 @@
 }
 
 /* other transitions */
-body, div, span, p, h1, h2, h3, h4, h5, h6 {
-    transition: background-color 0.15s ease-in-out, color 0.15s ease-in-out !important;
+body, div, span, p, h1, h2, h3, h4, h5, h6,
+input[type="submit"],
+input[type="button"],
+button {
+    transition: background-color 0.15s ease-in-out, color 0.15s ease-in-out, opacity 0.05s ease-in-out !important;
 }
 
 
@@ -32,7 +35,6 @@ button {
     line-height: 1.5;
     border-radius: var(--radius-md);
     box-shadow: 2px 2px 8px -4px var(--color-shadow);
-    transition: background-color 0.15s ease-in-out;
     overflow: hidden;
 }
 
