--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -779,6 +779,33 @@ td button:only-child {
     box-shadow: inset 0 -8px 16px -16px var(--color-shadow);
 }
 
+
+.sort-button {
+    position: absolute;
+    min-width: 0;
+    width:20px;
+    height:20px;
+    line-height: 1px;
+    right: 5px;
+    padding: 0;
+    color: var(--color-text-light);
+    margin-left: 4px;
+    background: var(--color-gray-bg);
+    cursor: pointer;
+    font-size: 12px;
+    border-radius: 3px;
+    opacity: 0;
+}
+thead:hover .sort-button {
+    opacity: .5;
+}
+.sort-button:hover, .sort-button.active, thead:hover .sort-button.active {
+    background-color: var(--color-gray-bg-hover);
+    color: var(--color-text);
+    opacity: 1;
+}
+
+
 table tr:not(:first-child) thead {
     display: none;
 }
