--- a/docs/css/global.css
+++ b/docs/css/global.css
@@ -10,6 +10,7 @@
 body, div, span, p, h1, h2, h3, h4, h5, h6,
 input[type="submit"],
 input[type="button"],
+select,
 button {
     transition: background-color 0.15s ease-in-out, color 0.15s ease-in-out, opacity 0.05s ease-in-out !important;
 }
@@ -17,6 +18,26 @@ button {
 
 
 /* Main interface defaults */
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 0;
+}
+
+input[type="text"],
+select {
+    outline: none;
+    border: 1px solid var(--color-text);
+    border-radius: var(--radius-md);
+    background-color: var(--background-color);
+    padding: .5rem;
+    min-width: 100px;
+}
 
 /* Button styles */
 input[type="submit"],
