--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -143,18 +143,8 @@ footer a:visited {
     border-radius: var(--radius-lg);
     width: 8px;
 }
-p {
-    margin: 0;
-}
-h1, h2, h3, h4, h5, h6 {
-    margin: 0;
-}
-input[type="text"] {
-    outline: none;
-    border: 1px solid var(--color-text);
-    border-radius: var(--radius-md);
-    padding: .5rem;
-}
+
+
 
 /* Hamburger Menu etc */
 .button-symbol {
@@ -215,7 +205,7 @@ input[type="text"] {
 }
 .content {
     flex: 1;
-    padding: var(--padding-md);
+    padding: 2px;/*var(--padding-md);*/
     overflow: auto;
     box-sizing: border-box;
 }
@@ -223,12 +213,15 @@ input[type="text"] {
     display: flex;
     flex-wrap: wrap;
     gap: var(--padding-sm);
-    justify-content: right; /*space-between;*/
+    justify-content: space-between;
     align-items: center;
     padding: var(--padding-sm);
     margin-top: var(--padding-sm);
     background-color: var(--color-gray-bg);
     border: 1px solid var(--color-border);
+}
+.content-header:has(.button-bar:only-child) {
+    justify-content: right;
 } 
 .content-header:first-of-type {
     border-radius: var(--radius-lg) var(--radius-lg) 0 0;
