--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -981,7 +981,19 @@ tr.dragging::after {
     border-radius: var(--radius-sm);
 }
 
+.item-image-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 64px;
+    height: 64px;
+}
 
+.item-image-container img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+}
 
 
 .table-edit-textarea, td input[type="number"] {
