--- a/docs/css/theme.css
+++ b/docs/css/theme.css
@@ -61,6 +61,7 @@
     --color-green: #198731;
     --color-green-hover: #146c1f;
     --color-green-bg: #c3e6c3;
+    --color-green-bg-transparent: #66cc7466;
     --color-green-bg-hover: #66cc74;
 
     /* Borders and Shadows */
