--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -974,6 +974,16 @@ tr.selected + .drop-target-above:not(.selected)::after {
     inset: 0;
     border-bottom: 2px solid var(--color-blue);
 }
+:has(.dragging) tr:hover > td.empty-message::after {
+    content: "";
+    position: absolute;
+    display: block;
+    background: var(--color-blue);
+    pointer-events: none;
+    z-index: 2;
+    inset: 0;
+    opacity: 0.5;
+}
 
 
 /*.drop-target-footer::after {
@@ -1135,7 +1145,7 @@ tr:hover > td > .table-cell-container > .table-edit-textarea, tr:hover > td > .t
 }*/
 
 /* Messages */
-.loading-message {
+.loading-message, .empty-message {
     text-align: center;
     padding: 1rem;
     color: #666;
